# cfs-edac

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  BUILD  Bazel.Makefile  CMakeLists.txt  README.md  WORKSPACE  bazel-bin  bazel-cfs-edac  bazel-out  bazel-testlogs  run
.github/workflows/: ci.yml
.gitlab/ci/: globals.yml
src/it/: BUILD.bazel  CMakeLists.txt
src/it/cfs/edac/features/step_definitions/: ErrorsTestSteps.cpp  ErrorsTestSteps.hpp  edac.cpp
src/main/cpp/: BUILD  BUILD.bazel  CMakeLists.txt
src/main/cpp/cfs/: main.cpp
src/main/cpp/cfs/edac/: Error.cpp  Error.hpp  ErrorHandler.cpp  ErrorHandler.hpp  ErrorOr.cpp  ErrorOr.hpp  Exception.cpp  Exception.hpp  IsErrorActive.cpp  IsErrorActive.hpp  Location.cpp  Location.hpp  Logger.cpp  Logger.hpp  LoggingService.cpp  LoggingService.hpp  NotFoundError.cpp  NotFoundError.hpp  ParameterSet.hpp
src/main/cpp/cfs/edac/callstack/: ABIDemangling.cpp  ABIDemangling.hpp  CallStack.cpp  CallStack.hpp  CallStackDataStructure.cpp  CallStackDataStructure.hpp
src/main/cpp/cfs/edac/internal/: Complex.cpp  Complex.hpp  LoggerPrivate.hpp  Stack.cpp  Stack.hpp  StackException.cpp  StackException.hpp
src/main/cpp/cfs/edac/namedType/: Crtp.cpp  Crtp.hpp  StrongType.cpp  StrongType.hpp  UnderlyingFunctionalities.cpp  UnderlyingFunctionalities.hpp
src/main/cpp/cfs/edac/namedType/internal/: NamedTypeInternal.cpp  NamedTypeInternal.hpp
src/main/cpp/cfs/edac/private/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp  ErrorCodeTable.cpp  ErrorCodeTable.hpp  LoggerPrivate.cpp  LoggerPrivate.hpp
src/main/cpp/cfs/edacl/: ErrnoMapper.cpp  ErrnoMapper.hpp  Error.cpp  Error.hpp  ErrorOr.hpp  Object.cpp  Object.hpp
src/main/cpp/cfs/edacl/errors/: ErrorCode.cpp  ErrorCode.hpp  FutureError.cpp  FutureError.hpp  GenericError.cpp  GenericError.hpp  IOError.cpp  IOError.hpp  IsErrorActive.cpp  IsErrorActive.hpp  LowLevelApiError.cpp  LowLevelApiError.hpp  SystemError.cpp  SystemError.hpp
src/main/cpp/cfs/edacl/errors/internal/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp
src/main/cpp/cfs/edacl/errors/private/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp
src/main/cpp/cfs/edacl/internal/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp  ErrorCodeTable.cpp  ErrorCodeTable.hpp  NotFoundError.cpp  NotFoundError.hpp  Registry.cpp  Registry.hpp
src/main/cpp/cfs/edar/: EventSystem.cpp  EventSystem.hpp  Logger.cpp  Logger.hpp  LoggingService.cpp  LoggingService.hpp  LoggingServicePrivate.cpp  LoggingServicePrivate.hpp
src/main/cpp/cfs/edar/internal/: CFSLevels.cpp  CFSLevels.hpp  ErrorCodeTable.hpp  LoggerPrivate.cpp  LoggerPrivate.hpp  LoggingServicePrivate.cpp  LoggingServicePrivate.hpp
src/main/cpp/cfs/fsm/: Error_sm.hpp
src/main/cpp/cfs/utils/: Helpers.hpp  Length.hpp  PimplPtr.hpp  PimplPtr.inl  SharedPimplPtr.hpp  SharedPimplPtr.inl  Singleton.hpp
src/main/cpp/cfs/utils/namedType/: Crtp.cpp  Crtp.hpp  StrongType.cpp  StrongType.hpp  UnderlyingFunctionalities.cpp  UnderlyingFunctionalities.hpp
src/main/cpp/cfs/utils/namedType/internal/: NamedTypeInternal.cpp  NamedTypeInternal.hpp
src/main/resources/: error.uml
src/main/resources/cmake/: FindAPR-util.cmake  FindLog4cxx.cmake
src/main/resources/cmake/macros/: CodingStyle.cmake  CompilerOption.cmake  DefinePlatformSpecfic.cmake  DocumentationTargets.cmake  GitInfo.cmake  goals.cmake  macros.cmake
src/main/resources/cmake/modules/: FindCFSBoost.cmake  FindCucumber-cpp.cmake  FindGoogleTestFwk.cmake
src/main/resources/cmakeModule/: FindApr.cmake  FindGoogleTestFwk.cmake
src/main/resources/configs/: AppInfo.hpp.in  CFSErrorList.cfg  Defines.hpp.in  Error.json  ErrorList.cfg  Poison.hpp.in  Version.cpp.in  Version.hpp.in  cfs-edac-config.cmake.in  cpp-style.cfg
src/main/resources/guides/: Guide.cpp  Guide.hpp  NamingRules.hpp  Nonmembers.hpp  example.cpp
src/main/resources/macros/: CompilerOption.cmake  Utils.cmake
src/test/cpp/: BUILD  BUILD.bazel  CMakeLists.txt
src/test/cpp/cfs/edac/: ErrorCodePrivateTest.cpp  ErrorCodePrivateTest.hpp  ExceptionTest.cpp  ExceptionTest.hpp  LocationTest.cpp  LocationTest.hpp  Test.cpp  Test.hpp  unitTest.cpp
src/test/cpp/cfs/edac/callstack/: ABIDemanglingTest.cpp  ABIDemanglingTest.hpp  CallStackDataStructureTest.cpp  CallStackDataStructureTest.hpp  CallStackTest.cpp  CallStackTest.hpp
src/test/cpp/cfs/edac/internal/: ComplexTest.cpp  ComplexTest.hpp  StackExceptionTest.cpp  StackExceptionTest.hpp  StackTest.cpp  StackTest.hpp
src/test/cpp/cfs/edac/namedType/: NamedTypeTest.cpp  NamedTypeTest.hpp
src/test/cpp/cfs/edacl/errors/: GenericErrorTest.cpp  GenericErrorTest.hpp  IOErrorTest.cpp  IOErrorTest.hpp  SystemErrorTest.cpp  SystemErrorTest.hpp
src/test/cpp/cfs/edar/: EventSystemTest.cpp  EventSystemTest.hpp
